tests/fixtures/multiline_annotation.txt
error: Variable referenced multiple times
   |
76 | fn add_title_line(result: &mut Vec<String>, main_annotation: Option<&Annotation>) {
77 |     if let Some(annotation) = main_annotation {
   |                 ^^^^^^^^^^ Variable defined here
78 |         result.push(format_title_line(
79 |             &annotation.annotation_type,
   |              ^^^^^^^^^^ Referenced here
80 |             None,
81 |             &annotation.label,
   |              ^^^^^^^^^^ Referenced again here
82 |         ));
83 |     }
84 | }
   |
